# slurm-web-plus

./: .gitignore  AGENTS.md  DEPLOY.md  README.md  alembic.ini  deploy-frontend.ps1  diagnose.sh  pyproject.toml  verify-console-logs.sh
.github/scripts/: build-triage-context.mjs  ensure-ci-result.mjs  run-ci-command.mjs
.github/workflows/: ci-triage.yml  frontend-ci.yml  frontend-static.yml  pre-commit.yml  python-ci.yml  python-os-ci.yml
conf/: init_db.sql
dev/crawler/: lib.py
docs/: README.md  access-control-dev-requirements.md  access-control-test-plan.md  ai-dev-requirements.md  ai-test-plan.md  antora.yml  architecture-overview.md  cache-page-dev-requirements.md  cache-page-test-plan.md  database-migrations.md  deployment-guide.md  feature-design.md  ldap-cache-verification.md  troubleshooting-console-logs.md  user-analytics-backend.md  verification-checklist.md
docs/guides/: database-migrations.md  deployment-guide.md  troubleshooting-console-logs.md  verification-checklist.md
docs/overview/: architecture-overview.md  latest-features.md  project-overview.md
docs/review/: README.md  backend-review.md  frontend-review.md  open-questions.md  test-review.md
docs/tracking/: README.md  error-log.md  (+1 more)
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
scripts/: continue-from-github-ci.ps1  fetch-github-ci-result.ps1  push-and-watch-github-ci.ps1  rebuild-user-tool.py  watch-github-ci.ps1
slurmweb/: access_control.py  alembic.ini  cache.py  ldap_ext.py  permission_rules.py  rebuild-user-tool.py  repair-user-tool-daily-stats.py  ui.py  version.py
(+368 files in other folders)
